--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
+    "react-router-dom": "^6.22.2",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
