--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,26 @@
-# Node.js
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 node_modules
+dist
+dist-ssr
+*.local
 
-# Build files
-build/
-dist/
-
-# Environment variables
 .env
 
-# IDE files
-.vscode/
-.idea/
-
-# Logs
-logs/
-*.log
-
-# Dependency lock files
-yarn.lock
-package-lock.json
-
-# Compiled output
-*.min.js
-*.min.css
-
-# Miscellaneous
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
