--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
     "version":2,
-    "builds:": [
-        {"src": "*.js", "use": "@vercel/node"}
-    ],
+    "build": "npm install --production",
     "routes": [
         {
             "src": "/(.*)",
