--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
         {
             "src": "package.json",
-            "use": "@now/node-server"
+            "use": "@vercel/node-server"
         }
     ],
     "routes": [
